--- a/package.json
+++ b/package.json
@@ -22,16 +22,17 @@
   "homepage": "https://github.com/TarasAutomation/cypress-telegram-reporter#readme",
   "dependencies": {
     "@types/node-telegram-bot-api": "^0.53.0",
+    "cypress-telegram-reporter": "^0.1.1",
     "del": "^6.0.0",
     "dotenv": "^10.0.0",
     "node-telegram-bot-api": "^0.54.0"
   },
   "devDependencies": {
+    "cypress": "^10.8.0",
     "cypress-dotenv": "^2.0.0",
-    "cypress": "^8.5.0",
-    "cypress-multi-reporters": "^1.5.0",
-    "mochawesome": "^6.3.0",
-    "mochawesome-merge": "^4.2.0",
-    "mochawesome-report-generator": "^5.2.0"
+    "cypress-multi-reporters": "^1.6.1",
+    "mochawesome": "^7.1.3",
+    "mochawesome-merge": "^4.2.1",
+    "mochawesome-report-generator": "^6.2.0"
   }
 }
